# GlowCast

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  package-lock.json  pyproject.toml  screenshot.mjs
.github/workflows/: ci.yml
app/: __init__.py  audit.py  logging.py  metrics.py  rbac.py  seed.py  settings.py
app/api/: __init__.py  main.py
app/causal/: __init__.py  dowhy_pipeline.py  uplift.py
app/cost/: __init__.py  cost_reduction.py  make_vs_buy.py  ocogs_tracker.py  price_elasticity.py  should_cost.py
app/dashboard/: dashboard.py  data.py
app/dashboard/views/: __init__.py  causal.py  cost_analytics.py  cost_operations.py  forecasting.py  mlops.py  overview.py  (+1 more)
app/data/: __init__.py  contracts.py  data_generator.py  segment_genes.py  star_schema.py
app/experimentation/: __init__.py  bucketing.py  cuped.py  interleaving.py  power.py  sequential.py
app/explain/: __init__.py  fairness.py  shap_lime.py
app/forecasting/: __init__.py  contracts.py  evaluation.py  hierarchy.py  models.py
app/mlops/: __init__.py  drift_monitor.py  feature_store.py  mlflow_registry.py  mlflow_tracker.py  retrain_trigger.py
app/sql/: __init__.py  cross_zone_penalty.sql  demand_anomaly.sql  dos_woc.sql  executor.py  scrap_risk.sql  social_lead_lag.sql
configs/: glowcast.yaml
data_quality/: great_expectations.yml  validate.py
data_quality/checkpoints/: daily_validation.yml
data_quality/expectations/: product_data.json  sales_data.json  social_signals.json
docs/: failure_modes.md  latency_budget.md  model_card.md  reproducibility.md
docs/adr/: 001-xlearner-over-tlearner.md  002-routing-ensemble.md  003-feature-store-ap-cp.md
helm/glowcast/: Chart.yaml  values.yaml
k8s/: api-deployment.yaml  api-service.yaml  configmap.yaml  dashboard-deployment.yaml  dashboard-service.yaml  hpa.yaml  ingress.yaml  namespace.yaml  postgres.yaml  redis.yaml  secret.yaml
k8s/canary/: canary.yaml  destinationrule.yaml  virtualservice.yaml
loadtests/: k6_api.js  slo.yaml
mlflow/: docker-compose.mlflow.yaml
monitoring/: docker-compose.monitoring.yaml  prometheus.yml
pipelines/: docker-compose.airflow.yaml
pipelines/dags/: glowcast_experimentation.py  glowcast_monitoring.py  glowcast_training.py
serving/: bentofile.yaml  service.py
terraform/: main.tf  outputs.tf  variables.tf
tests/: conftest.py  test_bucketing.py  test_config.py  test_contracts.py  test_cost_reduction.py  test_cuped.py  test_data_generator.py  test_dowhy.py  test_drift_monitor.py  test_evaluation.py  test_fairness.py  test_feature_store.py  test_forecasting_models.py  test_hierarchy.py  test_interleaving.py  test_make_vs_buy.py  test_ml_leakage.py  test_mlflow_tracker.py  test_ocogs.py  test_power.py  test_price_elasticity.py  test_property_based.py  test_retrain_trigger.py  test_segment_genes.py  test_sequential.py  test_shap_lime.py  test_should_cost.py  test_sql_pipelines.py  test_uplift.py
(+17 files in other folders)
