[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "glowcast"
version = "2.0.0"
description = "Cost & Commercial Analytics platform — should-cost modeling, OCOGS tracking, causal inference (DoWhy), A/B testing (CUPED), make-vs-buy analysis, and price elasticity."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "pandera>=0.17",
    "structlog>=23.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "hypothesis>=6.82",
    "ruff>=0.1",
    "mypy>=1.5",
]
api = [
    "fastapi>=0.104",
    "uvicorn>=0.24",
]
mlops = [
    "evidently>=0.4",
    "mlflow>=2.8",
]
causal = [
    "dowhy>=0.11",
    "causalml>=0.15",
    "econml>=0.15",
]
explain = [
    "shap>=0.43",
    "lime>=0.2",
]
dashboard = [
    "streamlit>=1.28",
    "plotly>=5.18",
]

[tool.ruff]
line-length = 130
target-version = "py311"
select = ["E", "F", "W", "I", "S", "B"]
ignore = ["S101", "S301", "S311"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
